--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"not dead"
 	],
 	"devDependencies": {
+		"@eslint/compat": "^2.0.1",
 		"@eslint/js": "^9.5.0",
 		"@stylistic/eslint-plugin": "^2.2.2",
 		"@stylistic/eslint-plugin-js": "^2.2.2",
@@ -34,6 +35,8 @@
 		"@types/bootstrap": "^5.2.10",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"@types/jest": "^29.5.14",
+		"@typescript-eslint/eslint-plugin": "^8.53.1",
+		"@typescript-eslint/parser": "^8.53.1",
 		"browser-sync": "^3.0.2",
 		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
