--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"gulp-rename": "^2.0.0",
 		"gulp-sass": "^5.1.0",
 		"line-awesome": "^1.3.0",
+		"nord": "^0.2.1",
 		"sass": "^1.77.6",
 		"typescript": "^5.5.2",
 		"vanilla-masker": "^1.2.0",
