--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"scripts": {
 		"build": "gulp build --prod",
 		"dev": "gulp dev --dev",
+		"screenshots": "gulp screenshots --dev",
 		"start": "gulp dev --prod",
 		"lint": "eslint ./src/scripts/**/*.ts",
 		"test": "gulp ts && jest"
@@ -37,7 +38,6 @@
 		"@types/jest": "^29.5.14",
 		"@typescript-eslint/eslint-plugin": "^8.53.1",
 		"@typescript-eslint/parser": "^8.53.1",
-		"browser-sync": "^3.0.2",
 		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
@@ -49,13 +49,17 @@
 		"gulp-sourcemaps": "^3.0.0",
 		"jest": "^29.7.0",
 		"prettier": "^3.3.2",
+		"puppeteer": "^24.35.0",
+		"sharp": "^0.34.5",
 		"source-map-support": "^0.5.21",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2"
 	},
 	"dependencies": {
+		"browser-sync": "^3.0.2",
 		"autoprefixer": "^10.4.19",
 		"bootstrap": "5.3.3",
+		"chalk": "^5.6.2",
 		"debounce": "^2.1.0",
 		"del": "^7.1.0",
 		"esbuild": "^0.21.5",
